# vivino-data-analysis

./: Screen Shot 2021-02-05 at 10.textClipping  pyproject.toml  vivino-ratings.csv
.history/: pyproject_20210205193248.toml  pyproject_20210205193306.toml  scraping_vivino_20210205185214.py  scraping_vivino_20210205185218.py  scraping_vivino_20210205185252.py  scraping_vivino_20210205185312.py  scraping_vivino_20210205185314.py  scraping_vivino_20210205185319.py  scraping_vivino_20210205185327.py  scraping_vivino_20210205185329.py  scraping_vivino_20210205185331.py  scraping_vivino_20210205185344.py  scraping_vivino_20210205185403.py  scraping_vivino_20210205185407.py  scraping_vivino_20210205185714.py  scraping_vivino_20210205185717.py  scraping_vivino_20210205185719.py  scraping_vivino_20210205185721.py  scraping_vivino_20210205185729.py  scraping_vivino_20210205185739.py  scraping_vivino_20210205185823.py  scraping_vivino_20210205185828.py  scraping_vivino_20210205185830.py  scraping_vivino_20210205185833.py  scraping_vivino_20210205185834.py  scraping_vivino_20210205185837.py  scraping_vivino_20210205185844.py  scraping_vivino_20210205185845.py  scraping_vivino_20210205185849.py  scraping_vivino_20210205185851.py  scraping_vivino_20210205185853.py  scraping_vivino_20210205185901.py  scraping_vivino_20210205185912.py  scraping_vivino_20210205185913.py  scraping_vivino_20210205185916.py  scraping_vivino_20210205185921.py  scraping_vivino_20210205185925.py  scraping_vivino_20210205185927.py  scraping_vivino_20210205185935.py  scraping_vivino_20210205185943.py  (+424 more)
